--- a/SASS/_index.scss
+++ b/SASS/_index.scss
@@ -239,15 +239,45 @@ a{
                         font-size: 18px;
                         font-weight: bold;
                     }
+                    .btn__check {
+                        display: none;
+                    }
 
-                    .btn-like{
-                        background: none;
+                        .btn {
+                        width: 40px;
+                        height: 40px;
                         border: none;
-                        margin-right: 10px;
-                        font-size: 22px;
-                        transition: all 300ms ease;
-                            &:active{
-                                color: #9356dc;
+                        background-color: transparent;
+                        position: relative;
+                        cursor: pointer;
+                        display: inline-flex;
+                        align-items: center;
+                        justify-content: center;
+                        .fa-regular {
+                            font-size: 22px;
+                            color: #666;
+                            transition: opacity 0.25s ease;
+                        }
+
+                        &__bg {
+                            position: absolute;
+                            font-size: 22px;
+                            background: linear-gradient(180deg, #9356dc, #ff79da);
+                            background-clip: text;     /* Applique le fond au texte */
+                            color: transparent; /* Rend le texte transparent pour voir le fond */
+                            opacity: 0;
+                            transform: scale(0.8);
+                            transition: opacity 0.3s ease, transform 0.3s ease;
+                        }
+                    }
+                    /* Quand le checkbox est coché → on change le style du label */
+                    .btn__check:checked + .btn {
+                        .fa-regular {
+                            opacity: 0;
+                        }
+                        .btn__bg {
+                            opacity: 1;
+                            transform: scale(1.1);
                         }
                     }
                 }
