--- a/SASS/_restaurant.scss
+++ b/SASS/_restaurant.scss
@@ -1,6 +1,32 @@
+
 @use '_variables.scss' as vars;
 
 .restaurant-page{
+    /* --- Animation d'apparition depuis la gauche --- */
+    @keyframes slide-in-right {
+        0% {
+            transform: translateX(-9999px);
+            opacity: 0;
+        }
+        100% {
+            transform: translateX(0);
+            opacity: 1;
+        }
+    }
+    .card {
+        opacity: 0;
+        animation: slide-in-right 2000ms ease-out forwards;
+    }
+    .card:nth-of-type(1) {
+        animation-delay: 0.3s;
+    }
+    .card:nth-of-type(2) {
+        animation-delay: 0.6s;
+    }
+    .card:nth-of-type(3) {
+        animation-delay: 0.9s;
+    }
+
     h1{
         font-family:shrikhand;
         font-size: 28px;
