--- a/SASS/app.css
+++ b/SASS/app.css
@@ -17,7 +17,7 @@
   justify-content: space-evenly;
 }
 .loader .load__bar {
-  background-color: #9356DC;
+  background-color: #9356dc;
   height: 100%;
   width: 3vh;
   animation: bars 1000ms backwards infinite ease-in-out;
@@ -28,10 +28,10 @@
   animation-delay: 200ms;
 }
 .loader .load__bar--1-inv {
-  animation-delay: 995ms;
+  animation-delay: 635ms;
   animation-direction: alternate-reverse;
   animation-fill-mode: forwards;
-  background-color: #FF79DA;
+  background-color: #ff79da;
 }
 .loader .load__bar--1-inv:hover {
   animation-play-state: paused;
@@ -41,10 +41,10 @@
   animation-delay: 400ms;
 }
 .loader .load__bar--2-inv {
-  animation-delay: 925ms;
+  animation-delay: 985ms;
   animation-direction: alternate-reverse;
   animation-fill-mode: forwards;
-  background-color: #FF79DA;
+  background-color: #ff79da;
 }
 .loader .load__bar--2-inv:hover {
   animation-play-state: paused;
@@ -54,10 +54,10 @@
   animation-delay: 600ms;
 }
 .loader .load__bar--3-inv {
-  animation-delay: 1410ms;
+  animation-delay: 1215ms;
   animation-direction: alternate-reverse;
   animation-fill-mode: forwards;
-  background-color: #FF79DA;
+  background-color: #ff79da;
 }
 .loader .load__bar--3-inv:hover {
   animation-play-state: paused;
@@ -67,10 +67,10 @@
   animation-delay: 800ms;
 }
 .loader .load__bar--4-inv {
-  animation-delay: 1880ms;
+  animation-delay: 1970ms;
   animation-direction: alternate-reverse;
   animation-fill-mode: forwards;
-  background-color: #FF79DA;
+  background-color: #ff79da;
 }
 .loader .load__bar--4-inv:hover {
   animation-play-state: paused;
@@ -80,10 +80,10 @@
   animation-delay: 1000ms;
 }
 .loader .load__bar--5-inv {
-  animation-delay: 1825ms;
+  animation-delay: 1570ms;
   animation-direction: alternate-reverse;
   animation-fill-mode: forwards;
-  background-color: #FF79DA;
+  background-color: #ff79da;
 }
 .loader .load__bar--5-inv:hover {
   animation-play-state: paused;
@@ -91,7 +91,7 @@
 .loader__title {
   font-family: "Shrikhand", cursive;
   font-size: 1.8rem;
-  color: #9356DC;
+  color: #9356dc;
   margin-top: 1rem;
   animation: textFade 3s ease-in-out;
 }
@@ -159,7 +159,7 @@ a {
 .card img {
   display: block;
   width: 100%;
-  height: 100%;
+  height: 200px;
   -o-object-fit: cover;
      object-fit: cover;
   border-top-left-radius: 15px;
@@ -330,6 +330,7 @@ a {
   gap: 20px;
 }
 .restaurants .restaurants-cards .card {
+  position: relative;
   display: flex;
   flex-direction: column;
   height: 251px;
@@ -340,8 +341,14 @@ a {
 .restaurants .restaurants-cards .card .image-container {
   position: relative;
   width: 100%;
-  height: 231px;
+  height: 200px;
   overflow: hidden;
+}
+.restaurants .restaurants-cards .card .image-container .image-container img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .restaurants .restaurants-cards .card .image-container .badge {
   position: absolute;
@@ -355,23 +362,30 @@ a {
   border-radius: 5px;
 }
 .restaurants .restaurants-cards .card .card-txt {
-  padding: 10px;
+  padding: 5px;
 }
 .restaurants .restaurants-cards .card .card-txt .card-header {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  align-items: center;
-  /* Quand le checkbox est coché → on change le style du label */
+  align-items: flex-start;
 }
 .restaurants .restaurants-cards .card .card-txt .card-header .card-title {
   margin: 0;
   font-size: 18px;
   font-weight: bold;
 }
-.restaurants .restaurants-cards .card .card-txt .card-header .btn__check {
+.restaurants .restaurants-cards .card .card-like {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  z-index: 10;
+  /* Quand le checkbox est coché → on change le style du label */
+}
+.restaurants .restaurants-cards .card .card-like .btn__check {
   display: none;
 }
-.restaurants .restaurants-cards .card .card-txt .card-header .btn {
+.restaurants .restaurants-cards .card .card-like .btn {
   width: 40px;
   height: 40px;
   border: none;
@@ -382,12 +396,12 @@ a {
   align-items: center;
   justify-content: center;
 }
-.restaurants .restaurants-cards .card .card-txt .card-header .btn .fa-regular {
+.restaurants .restaurants-cards .card .card-like .btn .fa-regular {
   font-size: 22px;
   color: #666;
   transition: opacity 0.25s ease;
 }
-.restaurants .restaurants-cards .card .card-txt .card-header .btn__bg {
+.restaurants .restaurants-cards .card .card-like .btn__bg {
   position: absolute;
   font-size: 22px;
   background: linear-gradient(180deg, #9356dc, #ff79da);
@@ -398,10 +412,10 @@ a {
   transform: scale(0.8);
   transition: opacity 0.3s ease, transform 0.3s ease;
 }
-.restaurants .restaurants-cards .card .card-txt .card-header .btn__check:checked + .btn .fa-regular {
+.restaurants .restaurants-cards .card .card-like .btn__check:checked + .btn .fa-regular {
   opacity: 0;
 }
-.restaurants .restaurants-cards .card .card-txt .card-header .btn__check:checked + .btn .btn__bg {
+.restaurants .restaurants-cards .card .card-like .btn__check:checked + .btn .btn__bg {
   opacity: 1;
   transform: scale(1.1);
 }
@@ -445,7 +459,6 @@ a {
   /* Styles pour la version desktop */
   section {
     width: 100%;
-    max-width: 1440px;
     margin: 0 auto;
     box-sizing: border-box;
   }
@@ -474,8 +487,8 @@ a {
     font-size: 20px;
   }
   .fonctionnement {
-    padding-left: 180px;
-    padding-right: 180px;
+    padding-left: 90px;
+    padding-right: 90px;
     background-color: white;
   }
   .fonctionnement .steps {
@@ -487,8 +500,8 @@ a {
     width: auto;
   }
   .restaurants {
-    padding-left: 180px;
-    padding-right: 180px;
+    padding-left: 90px;
+    padding-right: 90px;
   }
   .restaurants .restaurants-cards {
     flex-direction: row;
@@ -496,10 +509,10 @@ a {
     justify-content: center;
     gap: 40px;
   }
-  .restaurants .restaurants-cards a {
+  .restaurants .restaurants-cards .card {
     flex-grow: 1;
     flex-basis: 0;
-    min-width: 40%;
+    min-width: 45%;
   }
   .restaurants .restaurants-cards .card .purple {
     color: #9356dc;
@@ -528,6 +541,16 @@ a {
   }
   .footer-container .footer .footer-links p:nth-child(2) {
     margin-right: 40px;
+  }
+}
+@media screen and (min-width: 1440) {
+  .fonctionnement {
+    padding-left: 180px;
+    padding-right: 180px;
+  }
+  .restaurants {
+    padding-left: 180px;
+    padding-right: 180px;
   }
 }
 .restaurant-page {
